feat: enhance Performance Bundle with new tracking and notification features
- Added HTTP status code tracking to monitor and calculate ratios for various status codes (200, 404, 500, etc.).
- Introduced a compatibility guide detailing supported Doctrine and DBAL versions, along with breaking changes.
- Implemented a notification system for performance alerts via email, Slack, Teams, and webhooks.
- Updated documentation to include new configuration options and usage examples for the notification system.
- Removed the outdated test coverage report file and improved overall code organization.

--- a/src/Resources/translations/nowo_performance.en.yaml
+++ b/src/Resources/translations/nowo_performance.en.yaml
@@ -28,6 +28,7 @@ routes_table:
     title: "Routes"
     route_name: "Route Name"
     http_method: "HTTP Method"
+    status_codes: "Status Codes"
     environment: "Environment"
     request_time: "Request Time"
     query_time: "Query Time"
@@ -142,3 +143,26 @@ sort_options:
 order_options:
     descending: "Descending"
     ascending: "Ascending"
+
+# Access statistics
+access_statistics:
+    title: "Access Statistics by Hour"
+    date_range: "Date Range Filter"
+    start_date: "Start Date"
+    end_date: "End Date"
+    environment: "Environment"
+    filter: "Filter"
+    summary: "Summary"
+    total_accesses: "Total Accesses"
+    period: "Period"
+    by_hour: "Statistics by Hour of Day"
+    hour: "Hour"
+    access_count: "Access Count"
+    avg_response_time: "Avg Response Time"
+    status_codes: "Status Codes"
+    current_hour: "Current"
+    requests: "requests"
+    no_data: "No access data available for the selected period."
+    chart_title: "Access Pattern Visualization"
+    avg_response_time_ms: "Average Response Time (ms)"
+    response_time_ms: "Response Time (ms)"
