docs: release 2.0.4 - add HTTP Referer tracking and per-route access record saving option
- Introduced a new column `referer` in `routes_data_records` to store the HTTP Referer header.
- Added a feature to disable saving access records for individual routes via a checkbox in the review/config modal.
- Updated documentation to reflect these changes and provided migration steps for upgrading.

--- a/src/Resources/translations/nowo_performance.ca.yaml
+++ b/src/Resources/translations/nowo_performance.ca.yaml
@@ -94,6 +94,7 @@ review:
     modal_title_edit: "Editar revisió"
     queries_improved: "Consultes millorades?"
     time_improved: "Temps millorat?"
+    save_access_records: "Desar registres d'accés per a aquesta ruta"
     not_specified: "No especificat"
     yes: "Sí"
     no: "No"
@@ -193,6 +194,7 @@ access_statistics:
     total_queries: "Consultes"
     query_time: "Temps de consulta"
     memory_usage: "Memòria"
+    referer: "Referer"
     min_query_time: "Temps mín. de consulta (s)"
     max_query_time: "Temps màx. de consulta (s)"
     min_memory_mb: "Memòria mín. (MB)"
