--- a/src/Resources/translations/nowo_performance.cs.yaml
+++ b/src/Resources/translations/nowo_performance.cs.yaml
@@ -94,6 +94,7 @@ review:
     modal_title_edit: "Upravit kontrolu"
     queries_improved: "Dotazy vylepšeny?"
     time_improved: "Čas vylepšen?"
+    save_access_records: "Ukládat záznamy přístupů pro tuto trasu"
     not_specified: "Nespecifikováno"
     yes: "Ano"
     no: "Ne"
@@ -193,6 +194,7 @@ access_statistics:
     total_queries: "Dotazy"
     query_time: "Čas dotazu"
     memory_usage: "Paměť"
+    referer: "Referer"
     min_query_time: "Min. čas dotazu (s)"
     max_query_time: "Max. čas dotazu (s)"
     min_memory_mb: "Min. paměť (MB)"
