--- a/src/Resources/translations/nowo_performance.de.yaml
+++ b/src/Resources/translations/nowo_performance.de.yaml
@@ -99,6 +99,7 @@ review:
     modal_title_edit: "Prüfung bearbeiten"
     queries_improved: "Anfragen verbessert?"
     time_improved: "Zeit verbessert?"
+    save_access_records: "Zugriffsaufzeichnungen für diese Route speichern"
     not_specified: "Nicht angegeben"
     yes: "Ja"
     no: "Nein"
@@ -204,6 +205,7 @@ access_statistics:
     total_queries: "Anfragen"
     query_time: "Abfragezeit"
     memory_usage: "Speicher"
+    referer: "Referer"
     min_query_time: "Min. Abfragezeit (s)"
     max_query_time: "Max. Abfragezeit (s)"
     min_memory_mb: "Min. Speicher (MB)"
