--- a/src/Resources/translations/nowo_performance.es.yaml
+++ b/src/Resources/translations/nowo_performance.es.yaml
@@ -100,6 +100,7 @@ review:
     modal_title_edit: "Editar revisión"
     queries_improved: "¿Consultas Mejoradas?"
     time_improved: "¿Tiempo Mejorado?"
+    save_access_records: "Guardar registros de acceso para esta ruta"
     not_specified: "No especificado"
     yes: "Sí"
     no: "No"
@@ -205,6 +206,7 @@ access_statistics:
     total_queries: "Consultas"
     query_time: "Tiempo consultas"
     memory_usage: "Memoria"
+    referer: "Referer"
     min_query_time: "Tiempo consultas mín (s)"
     max_query_time: "Tiempo consultas máx (s)"
     min_memory_mb: "Memoria mín (MB)"
