--- a/src/Resources/translations/nowo_performance.it.yaml
+++ b/src/Resources/translations/nowo_performance.it.yaml
@@ -99,6 +99,7 @@ review:
     modal_title_edit: "Modifica revisione"
     queries_improved: "Query migliorate?"
     time_improved: "Tempo migliorato?"
+    save_access_records: "Salva i record di accesso per questa route"
     not_specified: "Non specificato"
     yes: "Sì"
     no: "No"
@@ -204,6 +205,7 @@ access_statistics:
     total_queries: "Query"
     query_time: "Tempo query"
     memory_usage: "Memoria"
+    referer: "Referer"
     min_query_time: "Tempo query min (s)"
     max_query_time: "Tempo query max (s)"
     min_memory_mb: "Memoria min (MB)"
