--- a/src/Resources/translations/nowo_performance.nl.yaml
+++ b/src/Resources/translations/nowo_performance.nl.yaml
@@ -94,6 +94,7 @@ review:
     modal_title_edit: "Beoordeling bewerken"
     queries_improved: "Queries verbeterd?"
     time_improved: "Tijd verbeterd?"
+    save_access_records: "Toegangsrecords voor deze route opslaan"
     not_specified: "Niet opgegeven"
     yes: "Ja"
     no: "Nee"
@@ -193,6 +194,7 @@ access_statistics:
     total_queries: "Queries"
     query_time: "Querytijd"
     memory_usage: "Geheugen"
+    referer: "Referer"
     min_query_time: "Min. querytijd (s)"
     max_query_time: "Max. querytijd (s)"
     min_memory_mb: "Min. geheugen (MB)"
