--- a/src/Resources/translations/nowo_performance.pl.yaml
+++ b/src/Resources/translations/nowo_performance.pl.yaml
@@ -94,6 +94,7 @@ review:
     modal_title_edit: "Edytuj przegląd"
     queries_improved: "Zapytania ulepszone?"
     time_improved: "Czas ulepszony?"
+    save_access_records: "Zapisz rejestrację dostępu dla tej trasy"
     not_specified: "Nie określono"
     yes: "Tak"
     no: "Nie"
@@ -193,6 +194,7 @@ access_statistics:
     total_queries: "Zapytania"
     query_time: "Czas zapytania"
     memory_usage: "Pamięć"
+    referer: "Referer"
     min_query_time: "Min. czas zapytania (s)"
     max_query_time: "Maks. czas zapytania (s)"
     min_memory_mb: "Min. pamięć (MB)"
