--- a/src/Resources/translations/nowo_performance.pt.yaml
+++ b/src/Resources/translations/nowo_performance.pt.yaml
@@ -99,6 +99,7 @@ review:
     modal_title_edit: "Editar revisão"
     queries_improved: "Consultas Melhoradas?"
     time_improved: "Tempo Melhorado?"
+    save_access_records: "Guardar registos de acesso para esta rota"
     not_specified: "Não especificado"
     yes: "Sim"
     no: "Não"
@@ -204,6 +205,7 @@ access_statistics:
     total_queries: "Consultas"
     query_time: "Tempo de Consulta"
     memory_usage: "Memória"
+    referer: "Referer"
     min_query_time: "Tempo mínimo de consulta (s)"
     max_query_time: "Tempo máximo de consulta (s)"
     min_memory_mb: "Memória mín (MB)"
