--- a/src/Resources/translations/nowo_performance.ru.yaml
+++ b/src/Resources/translations/nowo_performance.ru.yaml
@@ -94,6 +94,7 @@ review:
     modal_title_edit: "Редактировать проверку"
     queries_improved: "Запросы улучшены?"
     time_improved: "Время улучшено?"
+    save_access_records: "Сохранять записи обращений для этого маршрута"
     not_specified: "Не указано"
     yes: "Да"
     no: "Нет"
@@ -193,6 +194,7 @@ access_statistics:
     total_queries: "Запросы"
     query_time: "Время запросов"
     memory_usage: "Память"
+    referer: "Referer"
     min_query_time: "Мин. время запроса (с)"
     max_query_time: "Макс. время запроса (с)"
     min_memory_mb: "Мин. память (МБ)"
