--- a/src/Resources/translations/nowo_performance.tr.yaml
+++ b/src/Resources/translations/nowo_performance.tr.yaml
@@ -94,6 +94,7 @@ review:
     modal_title_edit: "İncelemeyi düzenle"
     queries_improved: "Sorgular iyileştirildi mi?"
     time_improved: "Süre iyileştirildi mi?"
+    save_access_records: "Bu rota için erişim kayıtlarını kaydet"
     not_specified: "Belirtilmedi"
     yes: "Evet"
     no: "Hayır"
@@ -193,6 +194,7 @@ access_statistics:
     total_queries: "Sorgular"
     query_time: "Sorgu Süresi"
     memory_usage: "Bellek"
+    referer: "Referer"
     min_query_time: "Min. sorgu süresi (s)"
     max_query_time: "Maks. sorgu süresi (s)"
     min_memory_mb: "Min. bellek (MB)"
