--- a/src/Resources/translations/nowo_performance.en.yaml
+++ b/src/Resources/translations/nowo_performance.en.yaml
@@ -100,6 +100,7 @@ review:
     modal_title_edit: "Edit Review"
     queries_improved: "Queries Improved?"
     time_improved: "Time Improved?"
+    save_access_records: "Save access records for this route"
     not_specified: "Not specified"
     yes: "Yes"
     no: "No"
@@ -205,6 +206,7 @@ access_statistics:
     total_queries: "Queries"
     query_time: "Query Time"
     memory_usage: "Memory"
+    referer: "Referer"
     min_query_time: "Min query time (s)"
     max_query_time: "Max query time (s)"
     min_memory_mb: "Min memory (MB)"
