--- a/src/Resources/translations/nowo_performance.it.yaml
+++ b/src/Resources/translations/nowo_performance.it.yaml
@@ -206,6 +206,7 @@ access_statistics:
     query_time: "Tempo query"
     memory_usage: "Memoria"
     referer: "Referer"
+    user: "Utente"
     min_query_time: "Tempo query min (s)"
     max_query_time: "Tempo query max (s)"
     min_memory_mb: "Memoria min (MB)"
