--- a/src/Resources/translations/nowo_performance.pt.yaml
+++ b/src/Resources/translations/nowo_performance.pt.yaml
@@ -206,6 +206,7 @@ access_statistics:
     query_time: "Tempo de Consulta"
     memory_usage: "Memória"
     referer: "Referer"
+    user: "Utilizador"
     min_query_time: "Tempo mínimo de consulta (s)"
     max_query_time: "Tempo máximo de consulta (s)"
     min_memory_mb: "Memória mín (MB)"
