feat: Add symfony/yaml dependency and enhance cache configuration
- Added `symfony/yaml` as a required dependency for loading YAML service configurations.
- Introduced a dedicated cache configuration option for the performance bundle, allowing users to specify a custom cache pool.
- Updated documentation to reflect the new cache features and configuration options.
- Enhanced the changelog and upgrading guide with details on the new cache pool and its usage.

--- a/src/Resources/translations/nowo_performance.en.yaml
+++ b/src/Resources/translations/nowo_performance.en.yaml
@@ -219,9 +219,7 @@ access_statistics:
     next: "Next"
     heatmap: "Access Heatmap (Day of Week vs Hour)"
     delete_records_matching_filter: "Delete records matching filter"
-    delete_records_confirm: "Are you sure you want to delete all records matching the current filter? This cannot be undone."
-
-# Route / page titles (for breadcrumbs, nav, messages)
+    delete_records_confirm: "Are you sure you want to delete all records matching the current filter? This cannot be undone."# Route / page titles (for breadcrumbs, nav, messages)
 access_records: "Access Records"
 api:
     chart_data: "Chart Data"
