feat: Enhance access records with route parameters and path
- Added `route_params` (JSON) and `route_path` (VARCHAR 2048) fields to `RouteDataRecord` for improved access tracking.
- Updated the Access Records UI to display a clickable Path column and include parameters in CSV/JSON exports.
- Modified related services, controllers, and message handlers to support the new fields.
- Updated documentation and changelog to reflect these changes and provide migration instructions.

--- a/src/Resources/translations/nowo_performance.en.yaml
+++ b/src/Resources/translations/nowo_performance.en.yaml
@@ -191,6 +191,8 @@ access_statistics:
     response_time_ms: "Response Time (ms)"
     filters: "Filters"
     route: "Route"
+    path: "Path"
+    params: "Params"
     status_code: "Status Code"
     all_routes: "All Routes"
     all_status_codes: "All Status Codes"
