feat: Enhance access records with new filters and UI improvements
- Added Referer and User filters to the Access Records page, allowing for partial match filtering. These filters are integrated into pagination, export options, and delete-by-filter functionality.
- Implemented scroll preservation in the Routes table when sorting or changing pages, improving user experience.
- Updated tests for RouteDataRecordRepository to accommodate new filter parameters.
- Enhanced documentation in the changelog and upgrading guide to reflect these changes.

--- a/src/Resources/translations/nowo_performance.en.yaml
+++ b/src/Resources/translations/nowo_performance.en.yaml
@@ -15,6 +15,10 @@ dashboard:
 # Statistics component
 statistics:
     total_routes: "Total Routes"
+    total_records: "Total Records"
+    view_records: "View records"
+    top_used_routes: "Most used routes"
+    top_consumed_routes: "Most consumed routes (by latency)"
     total_queries: "Total Queries"
     avg_queries: "Avg Queries"
     max_queries: "Max Queries"
