feat: Implement access records purging functionality
- Added a new command `nowo:performance:purge-records` to delete access records based on age or all records.
- Introduced configuration option `access_records_retention_days` to specify retention period for access records.
- Enhanced the Access Records UI with a form for purging records, allowing users to select purge type and specify days.
- Updated documentation to include usage instructions for the new command and configuration options.
- Improved the `PerformanceController` to handle purging requests and integrated the new form into the UI.

--- a/src/Resources/translations/nowo_performance.en.yaml
+++ b/src/Resources/translations/nowo_performance.en.yaml
@@ -225,7 +225,17 @@ access_statistics:
     next: "Next"
     heatmap: "Access Heatmap (Day of Week vs Hour)"
     delete_records_matching_filter: "Delete records matching filter"
-    delete_records_confirm: "Are you sure you want to delete all records matching the current filter? This cannot be undone."# Route / page titles (for breadcrumbs, nav, messages)
+    delete_records_confirm: "Are you sure you want to delete all records matching the current filter? This cannot be undone."
+    purge_records_title: "Purge records"
+    purge_records_help: "Clear access records by retention: delete all or only records older than X days. Configure access_records_retention_days in config to set default retention."
+    purge_type: "Action"
+    purge_all: "Clear all records"
+    purge_older_than: "Clear records older than X days"
+    older_than_days: "Days"
+    purge_records: "Purge"
+    purge_records_confirm: "Are you sure you want to purge the selected access records? This cannot be undone."
+    all_environments: "All environments"
+# Route / page titles (for breadcrumbs, nav, messages)
 access_records: "Access Records"
 api:
     chart_data: "Chart Data"
